Aranitsavam event update

--- a/Events.html
+++ b/Events.html
@@ -131,6 +131,26 @@
     <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
             <tr>
                     <td colspan="2">
+                        <h5><mark>Gayaka Sarvabhouma Parupalli Ramakrishnaiah Gari Aradhanotsavams - 2021 </mark></h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                            <img class="img-fluid" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                            src="images/GayakaSarvabhouma2021.jpeg">
+                    </td>
+                    <td style="vertical-align:center;text-align:justify;">
+                        Gayaka Sarvabhouma Parupalli Ramakrishnaiah Pantulu Trust proudly presents <br/>
+                        gurvugari aradhanotsavams . Please tune in!<br/>
+                        <br/>
+                        <br/>
+                        
+                        <a href="https://www.youtube.com/channel/UCZVMwYPkoq5RQr2IkffbXDw" target="_blank">Click here to tune in</a>
+                        <br/>                    
+                    </td>
+                </tr>
+            <tr>
+                    <td colspan="2">
                         <h5><mark>Prapancha Sangeetha Sammelan - 2021 </mark></h5>
                     </td>
                 </tr>
