--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           <div class="carousel-inner" role="listbox">
               <div class="carousel-item active">
                 <a href="Events.html">
-                <img src="images/PrapanchaSangeethaSammelan2021.jpeg"  class="img-fluid" style="height: 300%;width:100%;display: grid;max-height: 100vh;">
+                <img src="images/GayakaSarvabhouma2021.jpeg"  class="img-fluid" >
               </a>
               </div>
             <div class="carousel-item">
