--- a/Events.html
+++ b/Events.html
@@ -287,8 +287,8 @@
                 human form of Nada at the age of 96. <br /><br />
 
                 Pls watch personified music himself. They say that you can know Lord shiva only when you become Shiva
-                in famous chants of Rydram. <br />
-                Thus our guru proved that he has become Lord Sankara in the firm of music🙝🙝🙝🙝<br />
+                in famous chants of Rudram. <br />
+                Thus our guru proved that he has become Lord Sankara in the form of music<br />
             </td>
         </tr>
         <tr>
