--- a/Events.html
+++ b/Events.html
@@ -131,6 +131,27 @@
     <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
             <tr>
                     <td colspan="2">
+                        <h5><mark>London fine arts Diploma Exam Concerts - 2021 </mark></h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                            <img class="img-fluid" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;"
+                            src="images/MusicExam2021.jpeg">
+                    </td>
+                    <td style="vertical-align:center;text-align:justify;">
+                        Young talent of Sangeetha Bharathi<br/>
+                        <a href="https://www.youtube.com/watch?v=Kfqe7SK9ev4">Bharathi Manikandan's Concert</a><br/>
+                        <a href="https://www.youtube.com/watch?v=SE9_0s5zZO8">Sravani Kunapalli's Concert</a><br/>
+                        <a href="https://www.youtube.com/watch?v=IlxPq83LkSI">Salomia Joby's Concert</a><br/>
+                        <a href="https://www.youtube.com/watch?v=iFQbxUc4ZFg">Sudhiksha Ravooru's Concert</a><br/>
+                        <br/>
+                        Listen to the young artists and bless them!
+                        <br/>                 
+                    </td>
+                </tr>
+            <tr>
+                    <td colspan="2">
                         <h5><mark>Gayaka Sarvabhouma Parupalli Ramakrishnaiah Gari Aradhanotsavams - 2021 </mark></h5>
                     </td>
                 </tr>
