--- a/Photos.html
+++ b/Photos.html
@@ -127,7 +127,34 @@
             <p style="font-family:'Alegreya';color:#FFFFFF;padding-left: 50px;font-size:40px;">Our Proud Moments ...</p>
         </div>
     </div>
+
     <table class="table" style="width:100%;font-family:'Lato';text-align:center;">
+            <tr><td colspan="2"><h5><mark>2021 Exam - Proud Students</mark></h5></td></tr>
+            <tr>
+                <td colspan="2">
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fpadma.mallela.96%2Fposts%2F4324116124299030&show_text=true&width=500" width="500" height="497" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                </td>
+            </tr><tr>
+                <td colspan="2">
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D2893845000883087%26set%3Da.1730323567235242%26type%3D3&show_text=true&width=500" width="500" height="225" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D2893843817549872%26set%3Da.1730323567235242%26type%3D3&show_text=true&width=500" width="500" height="225" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                </td>
+                <td>
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D2893843877549866%26set%3Da.1730323567235242%26type%3D3&show_text=true&width=500" width="500" height="225" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D2893844960883091%26set%3Da.1730323567235242%26type%3D3&show_text=true&width=500" width="500" height="375" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                </td>
+                <td>
+                        <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto.php%3Ffbid%3D2893845104216410%26set%3Da.1730323567235242%26type%3D3&show_text=true&width=500" width="500" height="498" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                </td>
+            </tr>
         <tr>
             <td colspan="2">
                 <h5><mark>Music Exam 2020</mark></h5>
@@ -177,6 +204,7 @@
                     <iframe src="https://www.facebook.com/plugins/post.php?href=https%3A%2F%2Fwww.facebook.com%2Fphoto%2F%3Ffbid%3D556916837844064%26set%3Da.556899324512482&show_text=true&width=552&height=497&appId" width="552" height="497" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
             </td>
         </tr>
+        
     </table>
     <!-- The expanding image container -->
     <div class="container">
