--- a/index.html
+++ b/index.html
@@ -131,6 +131,11 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
+              <div class="centered">
+              <iframe width="1250" height="900" src="https://www.youtube.com/embed/RkueqBO1pJ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+            </div>
+            <div class="carousel-item">
               <div>
 
                 <a href="AboutUs.html">
