--- a/index.html
+++ b/index.html
@@ -128,12 +128,15 @@
           <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <div class="centered">
-              <iframe width="1250" height="900" src="https://www.youtube.com/embed/RkueqBO1pJ0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+              <div>                
+                <a href="Events.html">
+                  <img src="images/VamseeAwardPadmakka.jpeg">
+                </a>
+              </div>
             </div>
             <div class="carousel-item">
               <div>
