--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <div>                
+              <div style="display: relative;height: 900px;width:1250px;">                 
                 <a href="Events.html">
                   <img src="images/VamseeAwardPadmakka.jpeg">
                 </a>
