--- a/index.html
+++ b/index.html
@@ -131,10 +131,18 @@
             <li data-target="#myCarousel" data-slide-to="2"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item active">
-              <div style="display: relative;height: 900px;width:1250px;">                 
+            <div class="carousel-item">
+              <div style="display: relative;height: 600px;width:1050px;">                 
                 <a href="Events.html">
                   <img src="images/VamseeAwardPadmakka.jpeg">
+                </a>
+              </div>
+            </div>
+            <div class="carousel-item active">
+              <div style="display: relative;height: 900px;width:1250px;">
+
+                <a href="Events.html">
+                  <img src="images/Felicitation2.png">
                 </a>
               </div>
             </div>
