--- a/Events.html
+++ b/Events.html
@@ -131,12 +131,33 @@
     <table class="table table-striped" style="width:100%;font-family:'Lato';text-align:center;">
         <tr>
             <td colspan="2">
-                <h5><mark>CONGRATULATIONS - Dr.Padma Mallela, our beloved founder </mark></h5>
+                <h5><mark>Annammayya Padahela 2022 </mark></h5>
             </td>
         </tr>
         <tr>
             <td>
-                <img src="images/VamseeAwardPadmakka.jpeg">
+                <img src="images/AnnammayyaPadahela2022.jpeg" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;">
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/IJGezrDMyRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </td>
+        </tr>
+        <tr>
+            <td colspan="2">
+                <h5><mark>Celebating our Guru </mark></h5>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/Felicitation.png" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;">
+            </td>
+            <td style="vertical-align:center;text-align:justify;">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/c46oOrT5Bds" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>    
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="images/VamseeAwardPadmakka.jpeg" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;">
             </td>
             <td style="vertical-align:center;text-align:justify;">
                 Congratulations to our founder and principal, Dr.Padma Mallela for <br/><br/>
