--- a/index.html
+++ b/index.html
@@ -129,17 +129,18 @@
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
             <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="3"></li>
           </ol>
           <div class="carousel-inner" role="listbox">
-            <div class="carousel-item">
-              <div style="display: relative;height: 600px;width:1050px;">                 
+            <div class="carousel-item active">
+              <div style="display: relative;height: 900px;width:1350px;">                 
                 <a href="Events.html">
-                  <img src="images/VamseeAwardPadmakka.jpeg">
+                  <img src="images/AnnammayyaPadahela2022.jpeg">
                 </a>
               </div>
             </div>
-            <div class="carousel-item active">
-              <div style="display: relative;height: 900px;width:1250px;">
+            <div class="carousel-item">
+              <div style="display: relative;height: 900px;width:1350px;">
 
                 <a href="Events.html">
                   <img src="images/Felicitation2.png">
