--- a/Events.html
+++ b/Events.html
@@ -139,7 +139,9 @@
                 <img src="images/AnnammayyaPadahela2022.jpeg" style="width:560px; height:315px;box-shadow: 2px 2px 3px pink;border-radius: 14px;">
             </td>
             <td style="vertical-align:center;text-align:justify;">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/IJGezrDMyRA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                Watch on youtube
+                <br/>
+                <a href="https://youtu.be/IJGezrDMyRA">Click Here!</a>
             </td>
         </tr>
         <tr>
