--- a/OurTeam.html
+++ b/OurTeam.html
@@ -152,8 +152,8 @@
                     Padma has been the head of Sangeetha Bharathi and founded it back in 2004.
                     She has, to her credit, over 100 students and 15 graduates across New Zealand, Australia, India and
                     USA.
-                    Dr. Padma is a Phd graduate in Carnatic music and has been performing for the past 30 years.
-                    Her aim is to spread the art of Carnatic music to as many people as possible and make it available
+                    Dr. Padma is a Phd graduate in Carnatic music and has been performing for the past 30 years. She is a AIR graded artist
+                    with an aim to spread the art of Carnatic music to as many people as possible and make it available
                     to
                     anyone who wants to learn.<br />
                     <br />Research Work: <a href="https://shodhganga.inflibnet.ac.in/handle/10603/90051" target="_blank">
