--- a/index.html
+++ b/index.html
@@ -133,13 +133,6 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <div style="display: relative;height: 900px;width:1350px;">                 
-                <a href="Events.html">
-                  <img src="images/AnnammayyaPadahela2022.jpeg">
-                </a>
-              </div>
-            </div>
-            <div class="carousel-item">
               <div style="display: relative;height: 900px;width:1350px;">
 
                 <a href="Events.html">
@@ -244,7 +237,7 @@
     <!-- FOOTER -->
     <footer class="container-fluid">
       <p class="float-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2004-2021 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p>&copy; 2004-2023 Sangeetha Bharathi Music School, Inc. Venkata Padma Chitti &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
 </body>
 </main>
