--- a/Events.html
+++ b/Events.html
@@ -664,7 +664,7 @@
     <!-- FOOTER -->
     <footer class="container-fluid">
         <p class="float-right"><a href="#">Back to top</a></p>
-        <p>&copy; 2004-2021 Sangeetha Bharathi Music School, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+        <p>&copy; 2004-2023 Sangeetha Bharathi Music School, Inc. venkata padma chitti &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
 
 </body>
