--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
               <div style="display: relative;height: 900px;width:1350px;">
-
+                &nbsp;
+                &nbsp;
                 <a href="Events.html">
                   <img src="images/Felicitation2.png">
                 </a>
