Update Events.html with Lakshmi sravani name update

--- a/Events.html
+++ b/Events.html
@@ -206,7 +206,7 @@
                     <td style="vertical-align:center;text-align:justify;">
                         Young talent of Sangeetha Bharathi<br/>
                         <a href="https://www.youtube.com/watch?v=Kfqe7SK9ev4">Bharathi Manikandan's Concert</a><br/>
-                        <a href="https://www.youtube.com/watch?v=SE9_0s5zZO8">Sravani Kunapalli's Concert</a><br/>
+                        <a href="https://www.youtube.com/watch?v=SE9_0s5zZO8">Lakshmi Sravani Kunapuli's Concert</a><br/>
                         <a href="https://www.youtube.com/watch?v=IlxPq83LkSI">Salomia Joby's Concert</a><br/>
                         <a href="https://www.youtube.com/watch?v=iFQbxUc4ZFg">Sudhiksha Ravooru's Concert</a><br/>
                         <br/>
